# flatbuffers-parser

./: CHANGELOG.md  LICENSE  flatbuffers-parser.cabal
examples/: 001.txt  002.txt
src/Flatbuffers/: Parser.hs
test/: Main.hs
