cabal-version:      3.4
name:               flatbuffers-parser
version:            0.1.0.1
synopsis:           Parse flatbuffers
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrew Martin
maintainer:         andrew.thaddeus@gmail.com
copyright:          2025 Andrew Martin
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    ghc-options: -Wall -O2
    exposed-modules: Flatbuffers.Parser
    build-depends:
      , base >=4.16 && <5
      , primitive >= 0.9
      , contiguous >= 0.6.4.2
      , transformers >=0.6
      , byte-order >= 0.1.3.1
      , byteslice >=0.2.14
      , text >=2.1
    hs-source-dirs: src
    default-language: GHC2021

test-suite test
  ghc-options: -Wall -O2
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base >=4.16
    , flatbuffers-parser
    , bytesmith >=0.3.9
    , byteslice >=0.2.9
    , primitive >=0.7
    , bytebuild >=0.3.12
    , bytestring >=0.11
    , array-builder >=0.1.2
    , text >=2.0
    , base16-bytestring >=1.0.2
